fixed overlapping word count on mobile

--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -52,6 +52,7 @@
 }
 
 .sidebar__right {
+  clear: both;
   margin-bottom: 1em;
 
   @include breakpoint($large) {
